# cuda-affine-detect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
test/: .test2.mlir.swp  cgeist.sh  cuda.h  gemm.c  gemm.txt  test.sh  test1.cu  test1.txt  test2.cu  test2.txt
